--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.18.0/mapbox-gl.js'></script>
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.18.0/mapbox-gl.css' rel='stylesheet' />
-    <link rel="stylesheet" href="smelly.css" media="screen" title="no title" charset="utf-8">
-</head>
+---
+layout: default
+---
 
-<body>
-    <div id='map' style='width: 100vw; height: 100vh;' />
+<div id='map' style='width: 100vw; height: 100vh;' />
 
-    <script>
-        mapboxgl.accessToken = 'pk.eyJ1IjoiZ29sZGVubWVhbmllIiwiYSI6IjRiNmIyNmI1NDE5MDA1MGRjYzNjNzhhMjNmNjUyN2M1In0.gT4HUhlPjQdEbmS9u4Fs7g';
-        var map = new mapboxgl.Map({
-            container: 'map',
-            style: 'mapbox://styles/goldenmeanie/cimnj3beo004eb7nkqftc331e'
-        });
-    </script>
-</body>
-</html>
+<script>
+    mapboxgl.accessToken = 'pk.eyJ1IjoiZ29sZGVubWVhbmllIiwiYSI6IjRiNmIyNmI1NDE5MDA1MGRjYzNjNzhhMjNmNjUyN2M1In0.gT4HUhlPjQdEbmS9u4Fs7g';
+    var map = new mapboxgl.Map({
+        container: 'map',
+        style: 'mapbox://styles/goldenmeanie/cimnj3beo004eb7nkqftc331e'
+    });
+</script>
