--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@ layout: default
 <div id='map' style='width: 100vw; height: 100vh;' />
 
 <script>
-    mapboxgl.accessToken = 'pk.eyJ1IjoiZ29sZGVubWVhbmllIiwiYSI6IjRiNmIyNmI1NDE5MDA1MGRjYzNjNzhhMjNmNjUyN2M1In0.gT4HUhlPjQdEbmS9u4Fs7g';
-    var map = new mapboxgl.Map({
-        container: 'map',
-        style: 'mapbox://styles/goldenmeanie/cjirs8gwb2o8e2snxffn69osy'
-    });
+	mapboxgl.accessToken = 'pk.eyJ1IjoiZ29sZGVubWVhbmllIiwiYSI6IjRiNmIyNmI1NDE5MDA1MGRjYzNjNzhhMjNmNjUyN2M1In0.gT4HUhlPjQdEbmS9u4Fs7g';
+const map = new mapboxgl.Map({
+container: 'map', // container ID
+style: 'mapbox://styles/goldenmeanie/cjirs8gwb2o8e2snxffn69osy', // style URL
+zoom: 7, // starting zoom
+center: [138.043, 35.201] // starting center
+});
+
+map.on('load', () => {
+map.addSource('lilacs', {
+type: 'geojson',
+// Use a URL for the value for the `data` property.
+data: 'https://raw.githubusercontent.com/goldenmeanie/smelly/main/assets/json/lilacs.geojson'
+});
+
+map.addLayer({
+'id': 'earthquakes-layer',
+'type': 'circle',
+'source': 'lilacs',
+'paint': {
+'circle-radius': 8,
+'circle-stroke-width': 2,
+'circle-color': 'violet',
+'circle-stroke-color': 'white'
+}
+});
+});
 </script>
